--- a/ShowcaseClient/wwwroot/index.html
+++ b/ShowcaseClient/wwwroot/index.html
@@ -22,7 +22,8 @@
     <!--<blazor-app>
         <div class="bg-gray-800 h-16"></div>
     </blazor-app>-->
-    <div id="app">
+<!--<div id="app">-->
+    <blazor-app>
         <style>
             html,
             body,
@@ -195,17 +196,19 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!--</blazor-app>-->
+    <!--</div>-->
+    </blazor-app>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+    <script src="_content/Microsoft.AspNetCore.Components.CustomElements/BlazorCustomElements.js"></script>
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
-    
+
 </body>
 
 </html>
