Scores page work

--- a/ShowcaseClient/wwwroot/index.html
+++ b/ShowcaseClient/wwwroot/index.html
@@ -13,16 +13,12 @@
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
     <link href="./css/site.css" rel="stylesheet" />
-    <link href="BlazorAntDesign.styles.css" rel="stylesheet" />
+    <link href="ShowcaseClient.styles.css" rel="stylesheet" />
 
 
 </head>
 
 <body>
-    <!--<blazor-app>
-        <div class="bg-gray-800 h-16"></div>
-    </blazor-app>-->
-<!--<div id="app">-->
     <blazor-app>
         <style>
             html,
@@ -196,7 +192,6 @@
                 </div>
             </div>
         </div>
-    <!--</div>-->
     </blazor-app>
 
     <div id="blazor-error-ui">
